	fixed haxe.Stack in JS without -debug
	added support for -D no-swf-compress
	fixed ByteArray.readObject
	fixed implements Dynamic in Flash9
	removed neko.io.FileInput.eof, fixed neko.io.Input.readLine
	fixed haxe.Template for Flash9
	added neko.Sys.command optional array of arguments
	removed haxe.Proxy
	added flash.XMLRequest
	fixed Type.enumParameters for Neko

2007-08-29: 1.15
	fixed bug with Enum.construct when Enum have type parameters
	change with "untyped" : arguments types are checked (because of opt select)
	haxedoc : fixed type parameters display
	fix for JS and Flash9 XML parser : allow newlines in attributes
	disable Flash9 resources with AS3Gen
	error on extra anonymous fields
	error on too much big neko array declaration (neko 1.6 max_stack limit)
	fixed Flash9 statics slots (FP 9,0,60 compatibility)
	fixed Flash9 Type.getClassName
	optional enums arguments on Flash9 are now automatically Null
	forbid usage of type parameters in static functions
	fixed Std.int with negative numbers
	fixed some F9 issues with haXe-specific Array, Date and Math methods
	used AS3 namespace for F9 Array and String instance methods
	fixed F9 with uninitialized integer registers
	fixed F9 + operator with Dynamic/Null operands
	added Enum subtyping
	fix with remoting threadserver and exceptions
	fixed Flash9 dynamic runtime type field access
	fixed very tricky typing bug with constructors inheritance
	fixed some documentation related parser bug
	fixed stack overflow with static setter
	fixed package completion bug when -cp points to an not existing dir
	fix duplicate sandboxes tags with -swf
	__resolve in haXe Remoting is now public

2007-07-25: 1.14
	fixed no error when invalid "catch" expression
	remove variance
	fixed prototype bug in neko when "Main" class is defined
	fixed flash9 xml iterator methods
	bugfix in flash9 ByteArray serialization
	fixed genAS3 conflicting classes and interfaces
	preserve neko output file extension
	added flash.Event for Flash9